bugfix 03.06