@@ -49,6 +49,7 @@
                         --add-opens java.base/java.lang=ALL-UNNAMED
                         --add-opens java.base/java.util=ALL-UNNAMED
                         --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+                        -Djdk.attach.allowAttachSelf=true
                     </argLine>
                 </configuration>
             </plugin>
